Updates from Overleaf

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -12,12 +12,13 @@
 \usepackage{graphicx}
 \usepackage{natbib}
 \usepackage{doi}
+\usepackage{amsthm}
 
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
 \usepackage{mathtools}
 \usepackage{extsizes} % Возможность сделать 14-й шрифт
-
+\newtheorem{theorem}{Теорема}
 % \renewcommand{\shorttitle}{\textit{arXiv} Template}
 \renewcommand{\headeright}{}
 \renewcommand{\undertitle}{}
@@ -74,11 +75,11 @@
 
 В рамках эксперимента рассматривается задача классификации отзывов на ресурсе IMDB. Используется выборка IMDB Movie Review Dataset \cite{maas-EtAl:2011:ACL-HLT2011} состоящяя из 50 000 отзывов, а также типов отзывов: положительный, отрицательный. Требуется по тексту отзыва определить вероятность принадлежности отзыва к классу положительных и отрицательных.
 
-Для решения задачи используется рекуррентная нейронная сеть (обозначим через $\mathbf{f}$), принимающая векторы, полученные методом One-Hot Encoding \cite{onehot2018}. Рассматриваемая модель имеет 2 592 105 параметров. Безусловно, такую модель нельзя считать легко интерпретируемой.
+Для решения задачи используется рекуррентная нейронная сеть (обозначим через $\mathbf{f}$), принимающая векторы, полученные методом One-Hot Encoding \cite{onehot2018}. Рассматриваемая модель имеет 2 592 105 параметров. Такую модель нельзя считать легко интерпретируемой.
 
-Выборка разделена на две части: тренировочную и тестовую. Модель обучается на тренировочной выборке. После обучения измеряется качество модели на тестовой выборке. Была получена точность классификации (\textbf{accuracy}) около 60\%.
+Выборка разделена на две части: тренировочную и тестовую. Модель обучается на тренировочной выборке. После обучения измеряется качество модели на тестовой выборке. Была получена точность классификации (доля верных ответов) около 60\%.
 
-Интерпретацию модели $\mathbf{f}$ будем производить при помощи метода LIME \cite{ribeiro2016why}. Для построения интерпретации предсказания объекта $\mathbf{x}$ строится линейная модель $\mathbf{g}$ с небольшим числом параметров (число параметров обозначим через $K$), которая приближает поведение модели $\mathbf{f}$ в окрестности объекта $\mathbf{x}$. Для этого генерируются новые объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ в окрестности объекта $\mathbf{x}$. Вычисляются предсказания $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$ модели $\mathbf{f}$ на объектах $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$. То есть $\mathbf{y_i}=\mathbf{f}(\mathbf{x_i})$.
+Интерпретацию модели $\mathbf{f}$ будем производить при помощи метода LIME \cite{ribeiro2016why}. Для построения интерпретации предсказания объекта $\mathbf{x}$ строится линейная модель $\mathbf{g}$ с небольшим числом параметров (число параметров обозначим через $K$), которая приближает поведение модели $\mathbf{f}$ в окрестности объекта $\mathbf{x}$. Для этого порождаются новые объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ в окрестности объекта $\mathbf{x}$. Вычисляются предсказания $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$ модели $\mathbf{f}$ на объектах $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$. То есть $\mathbf{y_i}=\mathbf{f}(\mathbf{x_i})$.
 
 Линейная модель $\mathbf{g}$ с $K$ параметрами строится таким образом, чтобы как можно точнее классифицировать объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ с истинными метками $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$. Интерпретацией в данном случае являются веса исходных признаков, а именно присутствия/отсутствия слов в отзыве.
 
@@ -108,6 +109,66 @@
 
 \item Косинусное расстояние между предсказаниями исходной модели и построенной интерпретируемой модели
 \end{itemize}
+
+\section{Интерпретация рекуррентных нейронных сетей}
+
+Рассмотрим рекуррентную нейронную сеть $\mathbf{N}$. Её можно представить в виде обыкновенной нейронной сети, заменив рекуррентные слои на последовательность обыкновенных слоёв нейронов. А именно, пусть дан слой рекуррентной нейронной сети состоящий из $n$ нейронов с кусочно-линейной функцией активации $f$. Обозначим число рекуррентных запусков данного слоя через $k$. Заменим в архитектуре нейронной сети данный слой на $k$ слоёв, состоящих из $n$ нейронов, с функциями активации $f$. Таким образом, нейронная сеть представляется в виде обыкновенной сети.
+
+Введём обозначения.
+
+$L~-$ число слоёв нейронной сети
+
+$\mathbf{x}_0~-$ исходный объект
+
+$\mathbf{a}_i~-$ вход слоя с номером $i$
+
+$f_i~-$ функция активации после слоя с номером $i$
+
+$\mathbf{W}_i~-$ матрица линейного преобразования слоя с номером $i$
+
+$\mathbf{b}_i~-$ вектор сдвига
+
+$$a_i=f_i\left(\mathbf{W}_i \mathbf{a}_{i} + \mathbf{b}_i\right)$$
+
+$$\mathbf{a}_1=\mathbf{x}_0$$
+
+Рассматриваются кусочно-линейные функции активации, то есть
+
+\[f(x)=\left\{
+\begin{array}{ll}
+      r_1 x+t_1 & \text{if } x\in I_1 \\
+      r_2 x+t_2 & \text{if } x\in I_2 \\
+      \dots&\dots\\
+      r_u x+t_u & \text{if } x\in I_u \\
+\end{array} 
+\right. \]
+
+Причём $I_1,\dots,I_u$ - набор непересекающихся интервалов, покрывающий $\mathbb{R}$.
+
+Для фиксированного исходного объекта $\mathbf{x}_0$ каждая кусочно-линейная функция $f_i$ является линейной в некоторой окрестности своего аргумента, то есть в окрестности $\mathbf{W}_i \mathbf{a}_{i} + \mathbf{b}_i$.
+
+Также условие принадлежности аргумента $x$ интервалу $I_i~-$ это неравенство вида $p \leq x \leq q$.
+
+\begin{theorem}
+Пусть дана нейронная сеть $\mathbf{N}$ с кусочно-линейными функциями активации $f_i$. Тогда её можно представить в виде набора линейных функций $F_1,\dots,F_n$, каждая из которых определена на выпуклом многограннике $P_1,\dots,P_n$ в пространстве признаков $\mathcal{X}$.
+\end{theorem}
+\begin{proof}
+Рассмотрим произвольный $\mathbf{x}_0\in\mathcal{X}$. Как уже было показано, кусочно-линейные функции активации $f_i$ являются линейными в некоторой окрестности своего аргумента, соответствующему $\mathbf{x}_0$. Причём условие принадлежности аргумента функции $f_i$ к интервалу $I_j~-$ это пересечение двух линейных неравенств. Каждое из неравенств задаёт полупространство в пространстве $\mathcal{X}$. Пересечение полупространств является выпуклым многогранником. Помимо этого, суперпозиция линейных функций является линейной функцией.
+
+Таким образом, найден выпуклый многогранник $P_h$ и линейная функция $F_h$, заданная на этом многограннике и равная предсказаниям нейронной сети $\mathbf{N}$ на нём.
+
+В силу произвольности выбора $\mathbf{x}_0$ получаем, что всё пространство $\mathcal{X}$ разбивается на выпуклые многогранники $P_h$, на которых заданы линейные функции $F_h$.
+
+Нейронная сеть $\mathbf{N}$ имеет конечное число нейронов, значит, имеется конечное число неравенств, задающих полупространтва в пространстве $\mathcal{X}$. А конечное число неравенств задает лишь конечное число выпуклых многогранников. 
+\end{proof}
+
+Для решения задачи интерпретации рекуррентных нейронных сетей с кусочно-линейными функциями активации предлагается следующим алгоритм.
+
+1. Вычислить коэффициенты линейного классификатора $F_h$, ($h$ такое, что $\mathbf{x}_0\in P_h$).
+
+2. Выделить линейные неравенства на $\mathbf{x}_0$, соответствующие выпуклому многограннику $P_h$.
+
+3. Интерпретацией модели на входном объекте $\mathbf{x}_0$ является набор коэффициентов линейного классификатора $F_h$, соответствующие им признаки, а также набор условий задающих $P_h$.
 
 \bibliographystyle{unsrt}
 \bibliography{Gaponov2022InterpretableRNN}
