--- a/slides/main.tex
+++ b/slides/main.tex
@@ -38,7 +38,7 @@
 % %\end{block}
 % \end{frame}
 %-----------------------------------------------------------------------------------------------------
-\begin{frame}{Выбор интерпретируемых рекуррентных моделей глубокого обучения}
+\begin{frame}{Выбор интерпретируемых рекуррентных моделей}
 Интерпретация должна быть {\color{red}\textbf{точной}}, то есть поведение интерпретируемой модели похоже на исходную модель, и {\color{red}\textbf{согласованной}}, то есть интерпретации близких объектов должны быть похожи.
 
 \begin{columns}[c]
@@ -49,6 +49,8 @@
 \end{columns}
 % \bigskip
 Существующий метод \textbf{LIME} не обладает достаточной точностью.
+
+Требуется выбрать интерпретируемую \textbf{рекуррентную} модель глубокого обучения.
 % \includegraphics[width=10cm]{../figures/lime_int_exp.png}
 %Важное {\color{red}сообщение}.
 \end{frame}
