Updates from Overleaf

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -170,6 +170,17 @@ $$\mathbf{a}_1=\mathbf{x}_0$$
 
 3. Интерпретацией модели на входном объекте $\mathbf{x}_0$ является набор коэффициентов линейного классификатора $F_h$, соответствующие им признаки, а также набор условий задающих $P_h$.
 
+\section{Анализ ошибки}
+На подвыборке размера 1000 объектов для каждого объекта найдём ближайший к нему. За меру близости возьмём коэффициент Жаккара. Построим интерпретацию на текущем объекте и предскажем вероятность принадлежности к положительному классу для ближайшего объекта. Чем меньше эта вероятность отличается от вероятности, которую предсказывает исходная модель, тем лучше. 
+
+\includegraphics[width=0.9\textwidth]{../figures/lime_proba.eps}
+
+Как видно из графика, метод LIME неточно предсказывает вероятность. График получился шумным и значительно отличается от истинных предсказаний. Преимущество метода OpenBox заключается в том, что полученная интерпретируемая модель оказывается математически эквивалентна исходной, то есть предсказания построенной модели равны предсказаниям исходной.
+
+\includegraphics[width=0.9\textwidth]{../figures/lime_cosine.eps}
+
+Как видно из следующего графика, предсказания, полученные методом LIME, для значительной доли объектов отличается с точки зрения косинусного коэффициента. Это значит, что для значительной доли объектов интерпретируемые предсказания не соответствуют истинным предсказаниям.
+
 \bibliographystyle{unsrt}
 \bibliography{Gaponov2022InterpretableRNN}
 
