Updates from Overleaf

--- a/paper/Gaponov2022InterpretableRNN.tex
+++ b/paper/Gaponov2022InterpretableRNN.tex
@@ -55,60 +55,17 @@
 На выборке IMDB Movie Review Dataset \cite{maas-EtAl:2011:ACL-HLT2011} проведён вычислительный эксперимент для анализа качества метода, а также для проверки интерпретаций на точность и согласованность. 
 
 \section{Постановка задачи}
-Рассмотрим рекуррентную нейронную сеть $\mathbf{f}$ с кусочно-линейными функциями активации. Входные данные обозначим через $\mathbf{x} \in \mathbf{X}$, где $\mathbf{X} \subset \mathbb{R}^d$ --- пространство признаков. Предсказание модели $\mathbf{f}$ обозначим через $\mathbf{y} \in \mathbf{Y}$, где $\mathbf{Y}$ --- пространство предсказаний.
+Рассмотрим рекуррентную нейронную сеть $\mathbf{f}$ с кусочно-линейными функциями активации. Входные данные обозначим через $\mathbf{x} \in \mathbf{X}$, где $\mathbf{X} \subset \mathbb{R}^d$ --- пространство признаков. Метки классов, соответствующие объектам $\mathbf{X}$ обозначим через $\mathbf{y} \in \mathbf{Y}$, где $\mathbf{Y}$ --- пространство предсказаний.
 
 Модель представляет из себя функцию классификации $\mathbf{f}: \mathbf{X} \to \mathbf{Y}$. Из-за сложной структуры сети трудно интерпретировать поведение функции $\mathbf{f}$, поэтому необходимо получить интерпретацию, которую способен понять человек.
 
 Требуется построить модель, соответствующую функции $\mathbf{g}$, которая обладает следующими свойствами.
 
 Во-первых модель должна быть интерпретируемой. То есть можно построить простую зависимость выходных данных от входных (интерпретацию). Также модель должна быть точной, то есть функции $\mathbf{f}$ и $\mathbf{g}$ должны совпадать на множестве $\mathbf{X}$. Помимо этого, модель должна быть согласованной, то есть интерпретации близких объектов в пространстве $\mathbf{X}$ должны быть похожи.
-
 % Функция $F$ является кусочно-линейной, так как $\mathbf{N}~-$ рекуррентная нейронная сеть с кусочно-линейными функциями активации. Области, на которых функция $F$ линейна являются выпуклыми многогранниками.
-
 % Предлагается рассмотреть модель $\mathbf{M}$, представляющую из себя множество линейных классификаторов $\left\{F_1, F_2, \dots, F_h, \dots\right\}$. Пространство признаков $\mathbf{X}$ разбивается на конечное множество выпуклых многогранников $\left\{P_1, P_2, \dots, P_h, \dots\right\}$. То есть $\bigsqcup\limits_{h} P_h=\mathbf{X}$. Классификатор $F_h$ определён на многограннике $P_h$. Модель $\mathbf{M}$ должна быть математически эквивалентна модели $\mathbf{N}$, то есть множество функций $\left\{F_1, F_2, \dots, F_h, \dots\right\}$ определённых на $\left\{P_1, P_2, \dots, P_h, \dots\right\}$ тождественно равно функции $F$, определённой на $\mathbf{X}$.
-
 % Модель $\mathbf{M}$ обладает свойством точности, так как математически эквивалентна модели $\mathbf{N}$. То есть поведение двух моделей совпадает. $F|_{P_h} \equiv F_h$. Модель $\mathbf{M}$ также обладает свойством согласованности, так как близкие объекты попадают в один и тот же выпуклый многогранник $P_h$, а значит, классифицируются одним и тем же линейным классификатором $F_h$.
-
 %Задача состоит в поиске такой модели $\mathbf{M}$, построении множества классификаторов по произвольной рекуррентной нейронной сети $\mathbf{N}$.
-
-\section{Вычислительный эксперимент}
-
-В рамках эксперимента рассматривается задача классификации отзывов на ресурсе IMDB. Используется выборка IMDB Movie Review Dataset \cite{maas-EtAl:2011:ACL-HLT2011} состоящяя из 50 000 отзывов, а также типов отзывов: положительный, отрицательный. Требуется по тексту отзыва определить вероятность принадлежности отзыва к классу положительных и отрицательных.
-
-Для решения задачи используется рекуррентная нейронная сеть (обозначим через $\mathbf{f}$), принимающая векторы, полученные методом One-Hot Encoding \cite{onehot2018}. Рассматриваемая модель имеет 2 592 105 параметров. Такую модель нельзя считать легко интерпретируемой.
-
-Выборка разделена на две части: тренировочную и тестовую. Модель обучается на тренировочной выборке. После обучения измеряется качество модели на тестовой выборке. Была получена точность классификации (доля верных ответов) около 60\%.
-
-Интерпретацию модели $\mathbf{f}$ будем производить при помощи метода LIME \cite{ribeiro2016why}. Для построения интерпретации предсказания объекта $\mathbf{x}$ строится линейная модель $\mathbf{g}$ с небольшим числом параметров (число параметров обозначим через $K$), которая приближает поведение модели $\mathbf{f}$ в окрестности объекта $\mathbf{x}$. Для этого порождаются новые объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ в окрестности объекта $\mathbf{x}$. Вычисляются предсказания $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$ модели $\mathbf{f}$ на объектах $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$. То есть $\mathbf{y_i}=\mathbf{f}(\mathbf{x_i})$.
-
-Линейная модель $\mathbf{g}$ с $K$ параметрами строится таким образом, чтобы как можно точнее классифицировать объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ с истинными метками $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$. Интерпретацией в данном случае являются веса исходных признаков, а именно присутствия/отсутствия слов в отзыве.
-
-\section{Результаты эксперимента}
-
-Предсказание полученной методом LIME выглядит следующим образом.
-
-\includegraphics[width=\textwidth]{figures/lime_exp.png}
-
-Подсвеченные слова сильнее всего влияют на результат. Как можно заметить, модель отнесла отзыв к положительному классу, основываясь на наличии слов \texttt{and, able, men, last}. Понятно, что данные слова одинаково часто могут появиться как в положительном отзыве, так и в отрицательном. Таким образом, даже не учитывая метрику accuracy модели, можно сделать вывод, что модель непригодна для использования, так как делает предсказания на основе нерелевантных признаков. Однако из-за особенностей выборки непригодность модели можно не заметить, если рассматривать только метрики качества. 
-
-\includegraphics[width=\textwidth]{figures/lime_exp2.png}
-
-Вторая картинка показывает нам, что интерпретации несогласованны. А именно, значимые слова сильно отличаются. Такой эффект может быть связан с высокой сложностью модели.
-
-Также можно отметить, что метод LIME является не самым эффективным методом с точки зрения времени.
-
-\includegraphics[scale=0.5]{../figures/lime_time}
-
-Как видно из графика, на данной модели метод LIME способен обработать около 20 слов в секунду.
-
-Вышеперечисленных недостатков мы постараемся избежать в новом подходе.
-
-Для оценки качества интерпретации требуется построить следующие графики:
-\begin{itemize}
-\item Распределение предсказаний интерпретируемой модели
-
-\item Косинусное расстояние между предсказаниями исходной модели и построенной интерпретируемой модели
-\end{itemize}
 
 \section{Интерпретация рекуррентных нейронных сетей}
 
@@ -170,16 +127,87 @@ $$\mathbf{a}_1=\mathbf{x}_0$$
 
 3. Интерпретацией модели на входном объекте $\mathbf{x}_0$ является набор коэффициентов линейного классификатора $F_h$, соответствующие им признаки, а также набор условий задающих $P_h$.
 
+\section{Вычислительный эксперимент}
+
+В рамках эксперимента рассматривается задача классификации отзывов на ресурсе IMDB. Используется выборка IMDB Movie Review Dataset \cite{maas-EtAl:2011:ACL-HLT2011} состоящяя из 50 000 отзывов, а также типов отзывов: положительный, отрицательный. Требуется по тексту отзыва определить вероятность принадлежности отзыва к классу положительных и отрицательных.
+
+Для решения задачи используется рекуррентная нейронная сеть (обозначим через $\mathbf{f}$), принимающая векторы, полученные методом One-Hot Encoding \cite{onehot2018}. Рассматриваемая модель имеет 2 592 105 параметров. Такую модель нельзя считать легко интерпретируемой.
+
+Выборка разделена на две части: тренировочную и тестовую, в соотношении 3:1. Модель обучается на тренировочной выборке. После обучения измеряется качество модели на тестовой выборке. Была получена точность классификации (доля верных ответов) 65.55\%.
+
+Интерпретацию модели $\mathbf{f}$ будем производить при помощи метода LIME \cite{ribeiro2016why}. Для построения интерпретации предсказания объекта $\mathbf{x}$ строится линейная модель $\mathbf{g}$ с небольшим числом параметров (число параметров обозначим через $K$), которая приближает поведение модели $\mathbf{f}$ в окрестности объекта $\mathbf{x}$. Для этого порождаются новые объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ в окрестности объекта $\mathbf{x}$. Вычисляются предсказания $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$ модели $\mathbf{f}$ на объектах $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$. То есть $\mathbf{g}(\mathbf{x_i})=\mathbf{f}(\mathbf{x_i})$.
+
+Линейная модель $\mathbf{g}$ с $K$ параметрами строится таким образом, чтобы как можно точнее классифицировать объекты $\mathbf{x_1}, \mathbf{x_2}, \dots, \mathbf{x_n}$ с истинными метками $\mathbf{y_1}, \mathbf{y_2}, \dots, \mathbf{y_n}$. Интерпретацией в данном случае являются веса исходных признаков, а именно присутствия/отсутствия слов в отзыве.
+
+\section{Результаты эксперимента}
+
+Предсказание полученной методом LIME выглядит следующим образом.
+
+\includegraphics[width=\textwidth]{figures/lime_exp.png}
+
+Подсвеченные слова сильнее всего влияют на результат. Как можно заметить, модель отнесла отзыв к положительному классу, основываясь на наличии слов \texttt{and, able, men, last}. Понятно, что данные слова одинаково часто могут появиться как в положительном отзыве, так и в отрицательном. Таким образом, даже не учитывая метрику accuracy модели, можно сделать вывод, что модель непригодна для использования, так как делает предсказания на основе нерелевантных признаков. Однако из-за особенностей выборки непригодность модели можно не заметить, если рассматривать только метрики качества. 
+
+\includegraphics[width=\textwidth]{figures/lime_exp2.png}
+
+Вторая картинка показывает нам, что интерпретации несогласованны. А именно, значимые слова сильно отличаются. Такой эффект может быть связан с высокой сложностью модели.
+
+Также можно отметить, что метод LIME является не самым эффективным методом с точки зрения времени.
+
+\includegraphics[scale=0.5]{../figures/lime_time}
+
+Как видно из графика, на данной модели метод LIME способен обработать около 20 слов в секунду.
+
+Вышеперечисленных недостатков мы постараемся избежать в новом подходе.
+
+Для оценки качества интерпретации требуется построить следующие графики:
+\begin{itemize}
+\item Распределение предсказаний интерпретируемой модели
+
+\item Косинусное расстояние между предсказаниями исходной модели и построенной интерпретируемой модели
+\end{itemize}
+
 \section{Анализ ошибки}
 На подвыборке размера 1000 объектов для каждого объекта найдём ближайший к нему. За меру близости возьмём коэффициент Жаккара. Построим интерпретацию на текущем объекте и предскажем вероятность принадлежности к положительному классу для ближайшего объекта. Чем меньше эта вероятность отличается от вероятности, которую предсказывает исходная модель, тем лучше. 
 
-\includegraphics[width=0.9\textwidth]{../figures/lime_proba.eps}
+Для метода LIME будем строить предсказывать вероятности не на ближайшем объекте, а на исходном.
+
+\includegraphics[width=0.9\textwidth]{../figures/lime_proba_est.eps}
 
 Как видно из графика, метод LIME неточно предсказывает вероятность. График получился шумным и значительно отличается от истинных предсказаний. Преимущество метода OpenBox заключается в том, что полученная интерпретируемая модель оказывается математически эквивалентна исходной, то есть предсказания построенной модели равны предсказаниям исходной.
 
 \includegraphics[width=0.9\textwidth]{../figures/lime_cosine.eps}
 
 Как видно из следующего графика, предсказания, полученные методом LIME, для значительной доли объектов отличается с точки зрения косинусного коэффициента. Это значит, что для значительной доли объектов интерпретируемые предсказания не соответствуют истинным предсказаниям.
+
+Рассмотрим теперь метод OpenBox.
+
+\includegraphics[width=0.9\textwidth]{../figures/openbox_proba_est.eps}
+
+Как видно из графика модель не совсем точно предсказывает вероятности для соседних объектов, однако есть улучшение по сравнению с методом LIME.
+
+Посчитаем значение метрики Root Mean Squared Error.
+
+\begin{tabular}{l|l}
+Метод   &   RMSE  \\ \hline
+OpenBox & 0.08292 \\ \hline
+LIME    & 0.11822 \\ \hline
+\end{tabular}
+
+Значение метрики для метода OpenBox лучше, даже несмотря на то, что измерения для этого метода проводились не на исходных объектах, а на соседних.
+
+\includegraphics[width=0.9\textwidth]{../figures/openbox_cosine.eps}
+
+График косинусного расстояния также показывает, что интерпретации полученные методом OpenBox являются согласованными. Есть лишь небольшая доля объектов, на которых наблюдается существенное различие между истинным предсказанием и предсказанием метода.
+
+\section{Заключение}
+
+В работе был предложен метод выбора интерпретируемой рекуррентной модели глубокого обучения. Под интерпретируемостью понимается точность предсказаний и согласованность полученных интерпретаций.
+
+За основу был взят метод OpenBox, предназначенный для работы с моделями с кусочно-линейными функциями активации. Предложенный метод позволяет строить интерпретируемую модель для произвольной рекуррентной сети с кусочно-линейными функциями активации.
+
+Было проведено сравнение предложенного метода с методом LIME. Предложенный в работе метод показал более высокую точность и согласованность интерпретаций.
+
+В качестве продолжения данной темы можно рассмотреть нелинейные функции активации (такие как гиперболический тангенс, логистическая сигмоида и т.д.). Если обобщить метод на популярные нелинейные функции активации, то появится способ получать интерпретации для многих известных рекуррентных нейронных сетей.
 
 \bibliographystyle{unsrt}
 \bibliography{Gaponov2022InterpretableRNN}
